--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-firestore:19.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
     implementation 'com.firebaseui:firebase-ui-database:3.2.2'
 
