--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,19 @@
         <activity
             android:name=".authorization.ui.login.LoginActivity"
             android:label="@string/title_activity_login">
+
+        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".authorization.CreateAccountActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".authorization.ForgotPasswordActivity" />
+        <activity android:name=".authorization.LoginActivity" />
     </application>
 
 </manifest>
