--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     implementation 'com.google.firebase:firebase-database:17.0.0'
