--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,18 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
     implementation 'com.firebaseui:firebase-ui-database:4.3.2'
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+
+
+
+    // glide image library
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // volley http library
+    implementation 'com.android.volley:volley:1.1.0'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
