--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,21 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 
+// TODO Rzeczy związane z Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
 
+    //buildscript {
+    //    dependencies {
+    //        classpath 'com.google.gms:google-services:4.2.0'
+    //    }
+    //}
+
+    apply plugin: 'com.google.gms.google-services'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.1.0'
+//
 
     // glide image library
     implementation 'com.github.bumptech.glide:glide:4.9.0'
